; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_truncate.c___clear_shadow_entry.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_truncate.c___clear_shadow_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.address_space = type { i32, i32 }

@xas = common dso_local global i32 0, align 4
@workingset_update_node = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.address_space*, i32, i8*)* @__clear_shadow_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__clear_shadow_entry(%struct.address_space* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.address_space*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.address_space* %0, %struct.address_space** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* @xas, align 4
  %8 = load %struct.address_space*, %struct.address_space** %4, align 8
  %9 = getelementptr inbounds %struct.address_space, %struct.address_space* %8, i32 0, i32 1
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @XA_STATE(i32 %7, i32* %9, i32 %10)
  %12 = load i32, i32* @workingset_update_node, align 4
  %13 = call i32 @xas_set_update(i32* @xas, i32 %12)
  %14 = call i8* @xas_load(i32* @xas)
  %15 = load i8*, i8** %6, align 8
  %16 = icmp ne i8* %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  br label %24

18:                                               ; preds = %3
  %19 = call i32 @xas_store(i32* @xas, i32* null)
  %20 = load %struct.address_space*, %struct.address_space** %4, align 8
  %21 = getelementptr inbounds %struct.address_space, %struct.address_space* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = add nsw i32 %22, -1
  store i32 %23, i32* %21, align 4
  br label %24

24:                                               ; preds = %18, %17
  ret void
}

declare dso_local i32 @XA_STATE(i32, i32*, i32) #1

declare dso_local i32 @xas_set_update(i32*, i32) #1

declare dso_local i8* @xas_load(i32*) #1

declare dso_local i32 @xas_store(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
